Combat Visibility Fix

--- a/css/main.css
+++ b/css/main.css
@@ -1767,7 +1767,7 @@ tbody.collapse.in {
   background-color: transparent;
   border: 0;
 }
-.hidden {
+.ptu-hidden {
   display: none !important;
 }
 .affix {
